# wakapi-skill

./: .clawhubignore  .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  clawhub-publish.yml
references/: reference.md  wakapi-api.md  wakatime-api.md
scripts/: wakapi_query.py  wakatime_query.py
tests/: test_wakapi_query.py  test_wakatime_query.py
